--- a/build.gradle
+++ b/build.gradle
@@ -108,13 +108,14 @@ repositories {
     mavenCentral()
 }
 
+//요거들어가는순간 login창 생긴다.
 //https://www.youtube.com/watch?v=7luWlXkweEE
 //dependencies {
 //    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 //}
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    //implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
 
 dependencies {
