--- a/build.gradle
+++ b/build.gradle
@@ -99,7 +99,7 @@ compileQuerydsl {
 apply plugin: 'java'
 apply plugin: 'application'
 
-mainClassName = 'SheetsQuickstart'
+//mainClassName = 'SheetsQuickstart'
 sourceCompatibility = 11
 targetCompatibility = 11
 version = '1.0'
