--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,11 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -41,8 +46,9 @@ dependencies {
     // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
     implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.4'
 
-    //compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client'
-    //compile group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-java8time'
+    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client'
+    compile group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity5'
+    compile group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-java8time'
 
     //QueryDSL
     //querydsl 추가
