--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
+spring.thymeleaf.cache=false
+
+logging.level.org.springframework.security.web=trace
+logging.level.com.jejujerry=debug
+
 spring.profiles.include=oauth
 
-spring.thymeleaf.cache=false
+
