20230327 배포를위한 commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/bootex
-spring.datasource.username=bootuser
+#spring.datasource.url=jdbc:mariadb://localhost:3306/bootex
+#spring.datasource.username=bootuser
+spring.datasource.url=jdbc:mariadb://svc.sel3.cloudtype.app:31269/bootex
+spring.datasource.username=root
 spring.datasource.password=!wood2k15
 
 spring.jpa.hibernate.ddl-auto=update
@@ -14,5 +16,8 @@ logging.level.org.springframework.security.web=trace
 logging.level.com.jejujerry=debug
 
 spring.profiles.include=oauth
+
+#configuring port
+server.port = 8080
 
 
